--- a/style.css
+++ b/style.css
@@ -1,19 +1,33 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html, body {
+    height: 100%;
+    width: 100%;
+}
+
 div {
     border-style: solid;
     border-width: 1px;
-    margin: auto;
-    padding: 20px;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    display: grid;
+    grid-gap: 20px;
+    grid-template: 1fr 360px 1fr / 1fr 360px 1fr;
 }
 
 .row {
     display: flex;
     flex-direction: row;
-    padding: 0;
     border: 0;
+}
+
+#grid-container {
+    grid-row: 2;
+    grid-column: 2;
+    width: 100%;
+    height: 100%;
 }
