--- a/style.css
+++ b/style.css
@@ -8,15 +8,9 @@ html, body {
     width: 100%;
 }
 
-div {
-    border-style: solid;
-    border-width: 1px;
-}
-
 body {
     display: grid;
-    grid-gap: 20px;
-    grid-template: 1fr 360px 1fr / 1fr 360px 1fr;
+    grid-template: 1fr 360px 1fr / 2fr 360px 1fr;
 }
 
 .row {
@@ -25,9 +19,20 @@ body {
     border: 0;
 }
 
+.cell {
+    border-style: solid;
+    border-width: 1px;
+}
+
 #grid-container {
     grid-row: 2;
     grid-column: 2;
     width: 100%;
     height: 100%;
+}
+
+#settings {
+    grid-row: 2;
+    grid-column: 1;
+    border: 0px;
 }
